--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MojRozvrhFE</title>
-  <base href="/">
+  <title>Window</title>
+<!--  <link href="../../styles/material.css" rel="stylesheet">-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.syncfusion.com/ej2/24.2.3/material.css" rel="stylesheet"/>
+  <base href="/">
 </head>
-<body>
-  <app-root></app-root>
+<body class="ej2-new">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8WD8WN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<div hidden id="sync-analytics" data-queue="EJ2 - Angular - Demos"></div>
+
+<app-root></app-root>
 </body>
 </html>
