--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
 <!-- End Google Tag Manager (noscript) -->
 <div hidden id="sync-analytics" data-queue="EJ2 - Angular - Demos"></div>
 
-<app-root></app-root>
+<app-root class="h-full"></app-root>
 </body>
 </html>
